# update-chat-types

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  big-types.cha  bootstrap.sh
.github/workflows/: release.yml  rust.yml
benches/: my_benchmark.rs
fixtures/: no-types.cha  small-types.cha  tiny-types.cha
fixtures/test-dir/a/: a1.cha  a3.cha
fixtures/test-dir/b/: 0types.txt  b1.cha
fixtures/test-dir/b/d/: d1.cha
hooks/: pre-commit
src/: lib.rs  main.rs
test-dir/a/: 0types.txt  a2.cha
test-dir/b/c/: 0types.txt  c1.cha
tests/: integration.rs
tests/snapshots/: integration__snapshot_replace_existing_types.snap
