[package]
name = "update-chat-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
regex = "*"
walkdir = "*"
tempfile = "*"
clap = { version = "*", features = ["derive"]}

[dev-dependencies]
criterion = "*"

[[bench]]
name = "my_benchmark"
harness = false
